# nus_msba_bootcamp

./: 404.html  README.md  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  sitemap.xml
2021/07/26/: exercise-71.html  exercise-72.html
2021/07/27/: exercise-81.html
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_notebooks/: 2021-07-26-exercise-71.ipynb  2021-07-26-exercise-72.ipynb  2021-07-27-exercise-81.ipynb  pe8_01.ipynb
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
data/: census-income.csv  forbes_2000.csv  wholesale-customers.csv
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
search/: index.html
