[tool.poetry]
name = "bootcamp_base"
version = "0.1.0"
description = "base package for repo"
authors = ["Kyle Asano <kasano@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
